# fundraiser

./: README.md
fundraiser-anchor/programs/fundraiser/src/instructions/: checker.rs
fundraiser-native/: .gitignore  Cargo.toml
fundraiser-native/src/: lib.rs
fundraiser-native/src/instructions/: checker.rs  contribute.rs  initialize.rs  refund.rs
fundraiser-native/src/state/: contributor.rs  fundraiser.rs
fundraiser-native/src/tests/: checker_test.rs  contribute_test.rs  initialize_test.rs  mod.rs  refund_test.rs
fundraiser-optimised/: Cargo.toml
fundraiser-optimised/src/: lib.rs
fundraiser-optimised/src/instructions/: checker.rs  contribute.rs  initialize.rs  mod.rs  refund.rs
fundraiser-optimised/src/state/: contributor.rs  fundraiser.rs
fundraiser-optimised/src/tests/: checker_test.rs  contribute_test.rs  initialize_test.rs  mod.rs  refund_test.rs
