[package]
name = "fundraiser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.1"
solana-program = "=2.0.15"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "5.0.2", features = ["no-entrypoint"] }
thiserror = "2.0.0"

[dev-dependencies]
mollusk-svm = { git = "https://github.com/deanmlittle/mollusk" }
mollusk-token = { git = "https://github.com/deanmlittle/mollusk" }
solana-sdk = "=2.0.15"
solana-nostd-sha256 = "0.1.3"
pinocchio = "0.6.0"
pinocchio-system = "0.2.0"
pinocchio-token = "0.2.0"
five8_const = "0.1.3"
five8 = "0.2.1"


